# TORQCLAW

./: .env.example  .gitattributes  .gitignore  .gitmodules  .graphifyignore  CLAUDE.md  README.md  graphify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.claude/: CLAUDE.md  settings.json
docs/: PRD-TCLAW-TRUSTOS-001.md  TRUSTOS-BUILD-LEDGER.md  graphify-remediation-report.md  sprint2-3-refinements.md
engines/hermes_kernel/: README.md  package.json  pyproject.toml
engines/hermes_kernel/mcp_wrapper/: approval_hook.py  contracts.py  hermes_runner.py  server.py  skill_queue.py  task_store.py
engines/hermes_kernel/mcp_wrapper/schemas/: ClientCommand.json  ConnectFrame.json  GatewayRequest.json
engines/hermes_kernel/tests/: conftest.py  test_approval_hook.py  test_contracts.py  test_skill_queue.py  test_spend.py  test_task_store.py
ops/: Modelfile  bench-results.json  bench.mjs  check_receipt.py  dev-up.mjs  dump_events.py  dump_last_task.py  e2e-approval-cloud.mjs  e2e-approval.mjs  e2e-budget.mjs  e2e-cancel.mjs  e2e-channel.mjs  e2e.mjs  receipts-rebuild.mjs  servers.example.json  start-torqclaw.cmd  stats.mjs  verify_p2.py
scripts/: build_graphify_graphs.py  check_graphify_fitness.py  test_graphify_smoke.py
tests/: approvals-panel.test.tsx  approvals-read.test.ts  authz.test.ts  budget.test.ts  capability.test.ts  channel-http.test.ts  circuit-breaker.test.ts  classifier.test.ts  contracts-fixtures.test.ts  contracts-grants.test.ts  cost-panel.test.tsx  export-redaction.test.ts  friendly.test.ts  (+17 more)
(+29 files in other folders)
