[project]
name = "torqclaw-hermes-kernel"
version = "0.1.0"
description = "Thin MCP wrapper around the vendored Hermes agent (NousResearch/hermes-agent)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "jsonschema>=4.21.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
